--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -230,8 +230,8 @@
                             </li>
                         </ul>
 
-                        NEED IMAGE HERE
-                        <p class="image-caption">Image of presentation deck slides</p>
+                        <img class="img-fluid" src="../img/borrowell-branding/presentation-deck-templates@2x.png" alt="Presentation deck slide templates">
+                        <p class="image-caption">Presentation deck instruction and slide templates. Instructional slides include resuable assets like numbers, tags, phone frames and graphs that follow brand standards. These template slides are a few of the most commonly used layouts/situations. These were created for a cohesive look throughout presentations and to increase speed/efficiency for others putting slide decks together.</p>
                    </div>
 
                     <div class="section">
@@ -255,15 +255,17 @@
                     </div>
 
 
-                        <p>With the introduction of two new products in 2022, there was an opportunity to evaluate how colour could relate to each one. These financial products aren’t tangible items so we decided to use colour to help the separation. I chose a main colour for each and then worked in secondary colours that contrast well against these.</p>
+                        <!-- <p>With the introduction of two new products in 2022, there was an opportunity to evaluate how colour could relate to each one. These financial products aren’t tangible items so we decided to use colour to help the separation. I chose a main colour for each and then worked in secondary colours that contrast well against these.</p> -->
                         
                         <!-- <img class="img-fluid" src="../img/borrowell-branding/characters-2019@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones."> -->
-                        <p class="image-caption">Image representing product line colours with labels.</p>
+                        <!-- <p class="image-caption">Image representing product line colours with labels.</p> -->
 
-                        <p>I switched ad templates from Canva to Figma in 2023, as auto layouts in Figma allowed for responsive templates that adjust to frame size changes. I also created reusable components for easy swapping of images, enabling quick and easy testing of multiple ad variations.</p>
+                        <div class="section">
+                            <p>I switched ad templates from Canva to Figma in 2023, as auto layouts in Figma allowed for responsive templates that adjust to frame size changes. I also created reusable components for easy swapping of images, enabling quick and easy testing of multiple ad variations.</p>
 
-                        <!-- <img class="img-fluid" src="../img/borrowell-branding/characters-2019@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones."> -->
-                        <p class="image-caption">Image of Figma ads templates + components</p>
+                            <img class="img-fluid" src="../img/borrowell-branding/rent-advantage-ad-templates.png" alt="Rent advantage ad templates">
+                            <p class="image-caption">Ad templates in Figma with reusable components in the top row for easy ability to swap out graphics in each ad to create more variety.</p>
+                        </div>
 
                     <div class="section">
                         <h2>Opportunities for improvement</h2>
@@ -275,22 +277,25 @@
                                 <p>Make the shift from saturated background to lighter ones across all channels for a cohesive brand experience.
                                 </p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <p>Implement a sans serif typeface that’s easier to read on all platforms.</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <p>Evolve the overall messaging of Borrowell from focusing solely on “free credit score” to “building credit and achieving financial goals” so it’s more encompassing of the new credit building products that were launched in 2022.
                                 </p>
                             </li>
                         </ul>
+                    </div>
 
-                        <p class="image-caption">Image of CB landing page evolution that I proposed to be implemented</p>
+                    <div class="section">
+                        <img class="img-fluid" src="../img/borrowell-branding/credit-builder-landing-page-evolution.png" alt="Credit Builder landing page evolution">
+                        <p class="image-caption">Proposed Credit Builder landing page evolution from saturated backgrounds to lighter ones.</p>
                     </div>
 
                     <div class="section">
                         <div class="highlighted-section blue">
                             <h4>Results</h4>
-                            <p>Using graphics and animations to simplify financial concepts, I helped facilitate the growth of acquisition from approximately 700k to over 2.5 million members in a span of five years.</p>
+                            <p>Using graphics and animations to simplify financial concepts, I helped facilitate the growth of acquisition from approximately 700k to over 2.5 million members in the span of five years.</p>
                         </div>
                     </div>
 
