--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -245,11 +245,11 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-6">
                                 <img class="img-fluid" src="../img/borrowell-branding/saturated-backgrounds@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones.">
-                                <p class="image-caption">2018-2021 illustrations and ads that have mostly saturated backgrounds. I had started to experiment with lighter ones during this time to increase the promience of the imagery.</p>
+                                <p class="image-caption">2018-2021 illustrations and ads that have mostly saturated backgrounds. I also started to experiment with lighter ones during this time to increase the promience of the imagery.</p>
                             </div>
                             <div class="col-xs-12 col-md-6">
                                 <img class="img-fluid" src="../img/borrowell-branding/light-backgrounds@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones.">
-                                <p class="image-caption">2022-2023 illustrations and ads after adopting light backgrounds to enhance saturation and prominence of illustrated elements.</p>
+                                <p class="image-caption">2022-2023 illustrations and ads after adopting light backgrounds to enhance saturation and prominence of illustrated elements. Illustrations credits also to Brittany Edwards.</p>
                             </div> 
                         </div>
                     </div>
