Added content to the pages

--- a/index.html
+++ b/index.html
@@ -98,37 +98,37 @@
             <div class="col-xs-12">
                 <ul class="portfolio-items-list">
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/borrowell-branding.html"><img class="img-fluid" src="img/portfolio-items/borrowell-branding@2x.png" alt="Borrowell logo"></a>
-                        <h2>Borrowell branding</h2>
-                        <p>Case study of brand evolution from <span class="nowrap">2018-2023</span></p>
+                        <a class="" href="portfolio-pages/borrowell-branding.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-branding@2x.png" alt="Borrowell logo"></a>
+                        <h2>Brand identity</h2>
+                        <p>Case study of Borrowell's brand evolution from <span class="nowrap">2018-2023</span></p>
                         <a class="primary-button" href="portfolio-pages/borrowell-branding.html">View case study</a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/borrowell-credit-builder-explainer-video.html"><img class="img-fluid" src="img/portfolio-items/borrowell-credit-builder-explainer-video@2x.png" alt="Character dreaming about their financial goals"></a>
+                        <a class="" href="portfolio-pages/borrowell-credit-builder-explainer-video.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-credit-builder-explainer-video@2x.png" alt="Character dreaming about their financial goals"></a>
                         <h2>Explainer video</h2>
                         <p>Case study of an explainer video for Borrowell Credit Builder</p>
                         <a class="primary-button" href="portfolio-pages/borrowell-credit-builder-explainer-video.html">View case study</a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/borrowell-credit-builder-marketing-assets.html"><img class="img-fluid" src="img/portfolio-items/borrowell-credit-builder@2x.png" alt="Borrowell Credit Builder logo"></a>
+                        <a class="" href="portfolio-pages/borrowell-credit-builder-marketing-assets.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-credit-builder@2x.png" alt="Borrowell Credit Builder logo"></a>
                         <h2>Ads & landing page</h2>
                         <p>Case study of marketing assets for Borrowell Credit Builder</p>
                         <a class="primary-button" href="portfolio-pages/borrowell-credit-builder-marketing-assets.html">View case study</a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/demo-reel.html"><img class="img-fluid" src="img/portfolio-items/demo-reel@2x.png" alt="Demo reel"></a>
+                        <a class="" href="portfolio-pages/demo-reel.html"><img class="img-fluid" src="img/portfolio-thumbnails/demo-reel@2x.png" alt="Demo reel"></a>
                         <h2>Demo reel</h2>
                         <p>Snippets of motion graphics design work</p>
                         <a class="primary-button" href="portfolio-pages/demo-reel.html">View project</a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/borrowell-app-promo-video.html"><img class="img-fluid" src="img/portfolio-items/borrowell-app-promo-video.png" alt="Borrowell credit score"></a>
+                        <a class="" href="portfolio-pages/borrowell-app-promo-video.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-app-promo-video.png" alt="Borrowell credit score"></a>
                         <h2>Borrowell App Store listing</h2>
                         <p>Case study from organic listing to SEO testing</p>
                         <a class="primary-button" href="portfolio-pages/borrowell-app-promo-video.html">View project</a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/wsps-safety-group.html"><img class="img-fluid" src="img/portfolio-items/wsps-safety-group.jpg" alt="Characters connected to a thought bubble"></a>
+                        <a class="" href="portfolio-pages/wsps-safety-group.html"><img class="img-fluid" src="img/portfolio-thumbnails/wsps-safety-group.jpg" alt="Characters connected to a thought bubble"></a>
                         <h2>Explainer video</h2>
                         <p>WSPS Safety Groups</p>
                         <a class="primary-button" href="portfolio-pages/wsps-safety-group.html">View project</a>
