--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -244,7 +244,7 @@
                     <div class="section">
                         <div class="row">
                             <div class="col-xs-12 col-md-6">
-                                <img class="img-fluid" src="../img/borrowell-branding/saturated-backgrounds@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones.">
+                                <img class="img-fluid" src="../img/borrowell-branding/saturated-backgrounds.png" alt="Character ilustrations, including larger limbs and purple skin tones.">
                                 <p class="image-caption">2018-2021 illustrations and ads that have mostly saturated backgrounds. I also started to experiment with lighter ones during this time to increase the promience of the imagery.</p>
                             </div>
                             <div class="col-xs-12 col-md-6">
@@ -294,7 +294,7 @@
 
                     <div class="section">
                         <div class="highlighted-section blue">
-                            <h4>Results</h4>
+                            <h4>How success was measured</h4>
                             <p>Using graphics and animations to simplify financial concepts, I helped facilitate the growth of acquisition from approximately 700k to over 2.5 million members in the span of five years.</p>
                         </div>
                     </div>
@@ -309,9 +309,7 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Working for a startup involves a balance of quick deliverables for testing and learning, and establishing guidelines for efficiency.
-    
-                                    </p>
+                                    <p>Working for a startup involves a balance of quick deliverables for testing and learning, and establishing guidelines for efficiency.</p>
                                 </li>
                                 <li>
                                     <p>Style guides are a starting point for branding, but they will evolve with team and company needs.</p>
