--- a/portfolio-pages/borrowell-credit-builder-explainer-video.html
+++ b/portfolio-pages/borrowell-credit-builder-explainer-video.html
@@ -128,9 +128,17 @@
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6">
                                 <h3>Creating an explainer video</h3>
-                                <p>This was a self-initiated project to create an explainer video for the Credit Builder product. Despite A/B testing variations of the copy on the product education screen, there was no significant impact on results. Personally, I found the product difficult to comprehend and anticipated our members might feel the same way.
-                                </p>
+                                <p>This was a self-initiated project to create an explainer video for the Credit Builder product. Despite A/B testing variations of the copy on the product education screen, there was no significant impact on results. Personally, I found the product difficult to comprehend and anticipated our members might feel the same way.</p>
                             </div>
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/credit-builder-explainer-video/credit-builder-education-product-screens.png" alt="Borrowell Credit Builder education screen mocked up in situation on three phone screens.">
+                                <p class="image-caption">Credit Builder education screen in the Borrowell app. The explainer video was placed in the hero section of the page.</p>
+                            </div>
+                         </div>
+                    </div>
+
+                   <div class="section">
+                        <div class="row align-center">
                             <div class="col-xs-12 col-md-6">
                                 <div class="video-container">
                                     <div class="video-wrapper">
@@ -141,25 +149,24 @@
                                     </div>
                                 </div>
                             </div>
-                         </div>
-                    </div>
-
-                   <div class="section">
-                        <h4>Thought process</h4>
-                        <ul class="bullets">
-                            <li>
-                                <p>If changing the text doesn’t produce results, is there another way to explain the product?
-                                </p>
-                            </li>
-                            <li>
-                                <p>Our Help Centre's second most popular article on Credit Builder was "What is Credit Builder and how does it work?", suggesting that the education screen within the Borrowell app may not be effectively conveying the information.
-                                </p>
-                            </li>
-                            <li>
-                                <p>Given the popularity of videos, as evidenced by the success of platforms such as YouTube and TikTok, it was worth considering this medium to simplify explanations of complex topics.
-                                </p>
-                            </li>
-                        </ul>
+                            <div class="col-xs-12 col-md-6">
+                                <h4>Thought process</h4>
+                                <ul class="bullets">
+                                    <li>
+                                        <p>If changing the text doesn’t produce results, is there another way to explain the product?
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>Our Help Centre's second most popular article on Credit Builder was "What is Credit Builder and how does it work?", suggesting that the education screen within the Borrowell app may not be effectively conveying the information.
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>Given the popularity of videos, as evidenced by the success of platforms such as YouTube and TikTok, it was worth considering this medium to simplify explanations of complex topics.
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                    </div>
 
                     <div class="section">
