--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -108,26 +108,44 @@
 
                     <div class="section">
                         <h2>Overview</h2>
-                        <p>Borrowell Credit Builder is a financial product that helps members build their payment history, credit history and credit mix. The product launched in May 2022. Previously users had to sign up for a free credit score account with Borrowell, then navigate to and sign up for Credit Builder. This created a lot of friction and made it harder for marketing to achieve success. Once an external sign up for the Credit Builder project was launched, the ask from me was to create ads and a landing page for it.
-                        </p>
+                        <p>Borrowell Credit Builder is a financial product that helps members build their payment history, credit history and credit mix. The product launched in May 2022. </p>
                     </div>
-                    
-                    <div class="section">
-                        <h2>Ads</h2>
-                        <p>We had seen more success with lifestyle photography over illustration in ads in the past. Most of the ads used photography, but we added some with illustrations as well.</p>
-                        
-                        <p class="image-caption">Ads based on persona.</p>
 
-                        <p class="image-caption">Banner ads used by partners.</p>
+                    <div class="section">
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6 col-lg-4">
+                                <h3>The ask</h3>
+                                <p>Previously users had to sign up for a free credit score account with Borrowell, then navigate to and sign up for Credit Builder. This created a lot of friction and made it harder to achieve successful acquisitions. Once a separate sign up funnel was developed for the Credit Builder product, I was tasked with creating ads and a landing page.</p>
+                            </div>
+                            <div class="col-xs-12 col-md-6 col-lg-8">
+                                <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-illustration.png" alt="Credit Builder ads with illustrations">
+                                <p class="image-caption">Credit Builder banner and partner ads. Illustrations worked well for smaller sizes of ads, such as 728x90px, where space is limited.</p>
+                            </div>
+                         </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="row align-center flip-wrap-order">
+                            <div class="col-xs-12 col-md-6 col-lg-8">
+                                <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-photography.png" alt="Credit Builder ads with lifestyle photography">
+                                <p class="image-caption">Credit Builder Google Performance Max ads for various personas: Newcomers to Canada, students and the general public. These ads were larger and could accommodate lifestyle photography.</p>
+                            </div>
+                            <div class="col-xs-12 col-md-6 col-lg-4">
+                                <h3>Ads</h3>
+                                <p>In the past, we had found lifestyle photography to be more effective than illustration in ads. While most of our ads featured photography, we also continued to test some with illustrations.</p>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="section">
                         <h2>Landing page</h2>
                         <h3>The Problem</h3>
-                        <p>The biggest challenge with the paid ads campaigns is the fact that 90% of the users who clicked through and landed on the CB page on the marketing site navigated away from it. This is seen by the fact that 64 new FCS sign ups were attributed to the new campaigns.</p>
+                        <p>The biggest challenge with the paid ads campaigns is the fact that 90% of the users who clicked through and landed on the <a href="https://borrowell.com/credit-builder" target="_blank">Credit Builder page</a>  on the marketing site navigated away from it. This is seen by the fact that 64 new FCS sign ups were attributed to the new campaigns.</p>
 
+                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-photography.png" alt="Credit Builder ads with lifestyle photography">
                         <p class="image-caption">Image of CB landing page on marketing site.</p>
 
+                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-photography.png" alt="Credit Builder ads with lifestyle photography">
                         <p class="image-caption">Image of persona list and user journey.</p>
                     </div>
 
