--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -211,27 +211,29 @@
                     </div>
 
                    <div class="section">
-                        <h5>Solutions</h5>
-                        <ul class="bullets">
-                            <li>
-                                <p>Presentation deck template: This reduced the amount of ad hoc requests my team and I received. It also established an updated look for presentation decks so they could be cohesive company-wide.</p>
-                            </li>
-                            <li>
-                                <p>Email templates and reusable components in Salesforce: This empowered the email engagement to create a variety of layouts in their emails, but still stay on-brand.</p>
-                            </li>
-                            <li>
-                                <p>Social media templates: This allowed the marketing team to swap out copy and images in templates that followed brand colours and typography.</p>
-                            </li>
-                            <li>
-                                <p>Canva ad templates: This enabled the marketing team to test copy without needing my support to update it every time.</p>
-                            </li>
-                            <li>
-                                <p>Templates for each file size I often worked on: This made it quicker to get started on projects.</p>
-                            </li>
-                        </ul>
-
-                        <img class="img-fluid" src="../img/borrowell-branding/presentation-deck-templates@2x.png" alt="Presentation deck slide templates">
-                        <p class="image-caption">Presentation deck instruction and slide templates. Instructional slides include resuable assets like numbers, tags, phone frames and graphs that follow brand standards. These template slides are a few of the most commonly used layouts/situations. These were created for a cohesive look throughout presentations and to increase speed/efficiency for others putting slide decks together.</p>
+                    <div class="row align-center">
+                        <div class="col-xs-12 col-md-7 col-lg-6">
+                            <h5>Solutions</h5>
+                            <ul class="bullets">
+                                <li>
+                                    <p><span class="bold">Presentation deck template:</span> This reduced the amount of ad hoc requests my team and I received. It also established an updated look for presentation decks so they could be cohesive company-wide.</p>
+                                </li>
+                                <li>
+                                    <p><span class="bold">Email templates and reusable components in Salesforce:</span> This empowered the email engagement to create a variety of layouts in their emails, but still stay on-brand.</p>
+                                </li>
+                                <li>
+                                    <p><span class="bold">Social media templates:</span> This allowed the marketing team to swap out copy and images in templates that followed brand colours and typography.</p>
+                                </li>
+                                <li>
+                                    <p><span class="bold">Canva ad templates:</span> This enabled the marketing team to test copy without needing my support to update it every time.</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-xs-12 col-md-5 col-lg-6">
+                            <img class="img-fluid" src="../img/borrowell-branding/presentation-deck-templates.png" alt="Presentation deck slide templates">
+                            <p class="image-caption">Presentation deck slide templates. Instructional slides include resuable assets like numbers, tags, phone frames and graphs that follow brand standards. These were created for a cohesive look and to increase speed/efficiency for others creating presentations.</p>
+                        </div>
+                    </div>
                    </div>
 
                     <div class="section">
