--- a/portfolio-pages/borrowell-credit-builder-explainer-video.html
+++ b/portfolio-pages/borrowell-credit-builder-explainer-video.html
@@ -182,7 +182,7 @@
                             <div class="row align-center">
                                 <div class="col-xs-12 col-md-6">
                                     <li>
-                                        <p>Research around the use of videos to back up my idea:</p>
+                                        <p>Research conducted on the powerful impact of videos to validate my idea:</p>
                                         <ul>
                                             <li>
                                                 <p>People have short attention spans: Average of 8 seconds. (<a href="https://krausgroupmarketing.com/marketing-strategy/average-consumer-attention-span-has-dropped-again-in-2022/" target="_blank">source</a>)</p>
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="col-xs-12 col-md-6">
                                     <img class="img-fluid" src="../img/credit-builder-explainer-video/how-people-prefer-to-learn.png" alt="How people prefer to learn about a product/service. 66% watch a short video. 18% read text article. 4% infographic. 3% e-book. 3% webinaror pitch. 2% sales call or demo.">
-                                    <p class="image-caption">Graph demonstrating that learning by watching a video is preferred by the majority of people  (<a href="https://www.columnfivemedia.com/why-explainer-videos-help-your-brand/" target="_blank">source</a>)</p>
+                                    <p class="image-caption">Graph demonstrating that learning by watching a video is preferred by the majority of people (<a href="https://www.columnfivemedia.com/why-explainer-videos-help-your-brand/" target="_blank">source</a>).</p>
                                 </div>
                                 </div>
                             </ul>
@@ -272,7 +272,7 @@
                         </p>
 
                         <img class="img-fluid" src="../img/credit-builder-explainer-video/borrowell-credit-builder-storyboard.png" alt="Credit Builder storyboard">
-                        <p class="image-caption">Credit Builder storyboard</p>
+                        <p class="image-caption">Credit Builder storyboard.</p>
                    </div>
                     
                     <div class="section">
