--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -115,7 +115,7 @@
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6 col-lg-4">
                                 <h3>The ask</h3>
-                                <p>Previously users had to sign up for a free credit score account with Borrowell, then navigate to and sign up for Credit Builder. This created a lot of friction and made it harder to achieve successful acquisitions. Once a separate sign up funnel was developed for the Credit Builder product, I was tasked with creating ads and a landing page.</p>
+                                <p>Previously users had to sign up for a free credit score account with Borrowell, then navigate to and sign up for Credit Builder in the app. This created a lot of friction and made it harder to achieve successful acquisitions. Once a separate sign up funnel was developed for the Credit Builder product, I was tasked with creating ads and a landing page.</p>
                             </div>
                             <div class="col-xs-12 col-md-6 col-lg-8">
                                 <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-illustration.png" alt="Credit Builder ads with illustrations">
@@ -128,33 +128,50 @@
                         <div class="row align-center flip-wrap-order">
                             <div class="col-xs-12 col-md-6 col-lg-8">
                                 <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-photography.png" alt="Credit Builder ads with lifestyle photography">
-                                <p class="image-caption">Credit Builder Google Performance Max ads for various personas: Newcomers to Canada, students and the general public. These ads were larger and could accommodate lifestyle photography.</p>
+                                <p class="image-caption">Credit Builder Google Performance Max ads for various personas: Newcomers to Canada, students and the general public (adults). These ads are larger and could accommodate lifestyle photography more easily.</p>
                             </div>
                             <div class="col-xs-12 col-md-6 col-lg-4">
                                 <h3>Ads</h3>
-                                <p>In the past, we had found lifestyle photography to be more effective than illustration in ads. While most of our ads featured photography, we also continued to test some with illustrations.</p>
+                                <p>In the past, we had found lifestyle photography to be more effective when A/B tested against illustration for free credit score ads. While most of our ads featured photography, we also continued to test some with illustrations. Launching a new product that isn't tangible and doesn't have a recognizable symbol associated with the concept, gave us the opportunity to test this again.</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="section">
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-9">
+                                <h2>Landing page</h2>
+                                <h3>The problem</h3>
+                                <p>The biggest challenge with the paid ads campaigns is the fact that 90% of the users who clicked through and landed on the <a href="https://borrowell.com/credit-builder" target="_blank">Credit Builder page</a>  on the marketing site navigated away from it. This is seen by the fact that 64 new free credit score sign ups were attributed to the new campaigns.</p>
+                            </div>
+                            <div class="col-xs-12 col-md-3">
+                                <img class="img-fixed-width" src="../img/credit-builder-marketing-assets/credit-builder-page-marketing-site.png" alt="A mobile view of the Credit Builder landing page on Borrowell's marketing website">
+                                <p class="image-caption">Credit Builder page on the Borrowell marketing website.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="section">
-                        <h2>Landing page</h2>
-                        <h3>The Problem</h3>
-                        <p>The biggest challenge with the paid ads campaigns is the fact that 90% of the users who clicked through and landed on the <a href="https://borrowell.com/credit-builder" target="_blank">Credit Builder page</a>  on the marketing site navigated away from it. This is seen by the fact that 64 new FCS sign ups were attributed to the new campaigns.</p>
-
-                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-photography.png" alt="Credit Builder ads with lifestyle photography">
-                        <p class="image-caption">Image of CB landing page on marketing site.</p>
-
-                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-ads-photography.png" alt="Credit Builder ads with lifestyle photography">
-                        <p class="image-caption">Image of persona list and user journey.</p>
+                        <div class="row align-center flip-wrap-order">
+                            <div class="col-xs-12 col-md-8">
+                                <img class="img-fluid" src="../img/credit-builder-marketing-assets/user-journey.png" alt="Persona list and user journey for Credit Builder">
+                                <p class="image-caption">List of personas and a user journey for the different touchpoints before acquisition.</p>
+                            </div>
+                            <div class="col-xs-12 col-md-4">
+                                <h3>Diving deeper</h3>
+                                <p>The target audience for the Credit Builder ads included newcomers to Canada, students and the general public (adults).</p>
+                            </div>
+                        </div>  
                     </div>
 
                     <div class="section">
                         <h3>Creating a new landing page</h3>
                         <h4>Starting with research</h4>
-                        <p>I started with some competitor research to see how other companies like Koho and Self Inc. are explaining their credit building projects.</p>
+                        <p>To gain insights into credit building projects, I initiated competitor research by analyzing how companies are presenting their strategies. A few things were consistent between all of them: concise/catchy copy in the hero, steps/how it works section and a trust/social proof part.                        </p>
                         
-                        <p class="image-caption">Image of competitor websites and notes.</p>
+                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/competitor-research.png" alt="Competitor websites">
+                        <p class="image-caption">Credit building competitors: Koho, Self Inc., Spring and Kikoff.</p>
                     </div>
 
                     <div class="section">
